# test_proj

./: .gitignore  README.md  pyproject.toml
rust/: Cargo.toml
rust/src/: expressions.rs  lib.rs
scripts/: test.py
src/test_proj/polars_plugins/: pig_latin.py  sum.py
tests/: test_piglatin.py
