[build-system]
requires = ["maturin>=1.8.1"]
build-backend = "maturin"

[project]
name = "testproject"
version = "0.0.1"
description = "A template for a Python project"
requires-python = ">=3.10,<3.13"
dependencies = ["polars>=1.20.0"]

[tool.maturin]
python-source = "src"
module-name = "test_proj._polars_plugins"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
